--- a/ui/src/main/resources/cz/masci/drd/ui/fxml/main-scene.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/fxml/main-scene.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.*?>
 
-<TabPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<TabPane xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cz.masci.drd.ui.MainController">
    <tabs>
       <Tab fx:id="tabAdventures" closable="false" text="Dobrodružství" />
       <Tab fx:id="tabMonsters" closable="false" text="Příšery" />
