--- a/ui/src/main/resources/cz/masci/drd/ui/fxml/home-screen.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/fxml/home-screen.fxml
@@ -26,7 +26,8 @@
 <?import javafx.scene.layout.RowConstraints?>
 <AnchorPane maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
         xmlns="http://javafx.com/javafx"
-        xmlns:fx="http://javafx.com/fxml">
+        xmlns:fx="http://javafx.com/fxml"
+        fx:controller="cz.masci.drd.ui.HomeScreen">
     <children>
         <GridPane gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
