--- a/ui/src/main/resources/cz/masci/drd/ui/fxml/home-screen.fxml
+++ b/ui/src/main/resources/cz/masci/drd/ui/fxml/home-screen.fxml
@@ -24,10 +24,9 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
-<AnchorPane maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0"
+<AnchorPane maxHeight="Infinity" maxWidth="Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0"
         xmlns="http://javafx.com/javafx"
-        xmlns:fx="http://javafx.com/fxml"
-        fx:controller="cz.masci.drd.ui.HomeScreen">
+        xmlns:fx="http://javafx.com/fxml">
     <children>
         <GridPane gridLinesVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
@@ -37,17 +36,12 @@
             <rowConstraints>
                 <RowConstraints minHeight="80" vgrow="SOMETIMES"/>
                 <RowConstraints minHeight="80" vgrow="SOMETIMES"/>
-                <RowConstraints minHeight="80" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <Button fx:id="btnAdventures" styleClass="home-screen-button" maxWidth="Infinity" maxHeight="Infinity" onAction="#btnAction"
-                        text="Dobrodružství"/>
-                <Button fx:id="btnMonsters" styleClass="home-screen-button" maxWidth="Infinity" maxHeight="Infinity" onAction="#btnAction"
-                        text="Příšery" GridPane.columnIndex="1"/>
-                <Button fx:id="btnWeapons" styleClass="home-screen-button" maxWidth="Infinity" maxHeight="Infinity" onAction="#btnAction"
-                        text="Zbraně" GridPane.rowIndex="1"/>
-                <Button fx:id="btnBattle" styleClass="home-screen-button" maxWidth="Infinity" maxHeight="Infinity" onAction="#btnAction"
-                        text="Bitva" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
+                <Button fx:id="btnAdventures" maxWidth="Infinity" maxHeight="Infinity" text="Dobrodružství" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
+                <Button fx:id="btnMonsters" maxWidth="Infinity" maxHeight="Infinity" text="Příšery" GridPane.rowIndex="0" GridPane.columnIndex="1"/>
+                <Button fx:id="btnWeapons" maxWidth="Infinity" maxHeight="Infinity" text="Zbraně" GridPane.rowIndex="1" GridPane.columnIndex="0"/>
+                <Button fx:id="btnBattle" maxWidth="Infinity" maxHeight="Infinity" text="Bitva" GridPane.rowIndex="1" GridPane.columnIndex="1"/>
             </children>
         </GridPane>
     </children>
